<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="Search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/activity_title_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_more_app"
        android:orderInCategory="100"
        android:title="@string/more_title_more_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="100"
        android:title="@string/more_title_rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/more_title_about"
        app:showAsAction="never" />

</menu>
