<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cardClearBg"
    app:cardCornerRadius="@dimen/spacing_5"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_15"
            android:text="@string/title_dialog_set_wallpaper"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/textIconPrimary"
            app:fontFamily="@font/custom_font_medium" />

        <LinearLayout
            android:id="@+id/lyt_home_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_12"
            android:paddingTop="@dimen/spacing_10"
            android:paddingRight="@dimen/spacing_12"
            android:paddingBottom="@dimen/spacing_10">

            <ImageView
                android:layout_width="@dimen/spacing_24"
                android:layout_height="@dimen/spacing_24"
                app:srcCompat="@drawable/ic_home"
                app:tint="@color/textIconSecondary" />

            <View
                android:layout_width="@dimen/spacing_10"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_home"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/textIconPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_lock_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_12"
            android:paddingTop="@dimen/spacing_10"
            android:paddingRight="@dimen/spacing_12"
            android:paddingBottom="@dimen/spacing_10">

            <ImageView
                android:layout_width="@dimen/spacing_24"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_lock"
                app:tint="@color/textIconSecondary" />

            <View
                android:layout_width="@dimen/spacing_10"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_lock"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/textIconPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_12"
            android:paddingTop="@dimen/spacing_10"
            android:paddingRight="@dimen/spacing_12"
            android:paddingBottom="@dimen/spacing_10">

            <ImageView
                android:layout_width="@dimen/spacing_24"
                android:layout_height="@dimen/spacing_24"
                app:srcCompat="@drawable/ic_smartphone"
                app:tint="@color/textIconSecondary" />

            <View
                android:layout_width="@dimen/spacing_10"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_both"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/textIconPrimary" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_10" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
