<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardClearBg"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cardClearBg"
        android:fitsSystemWindows="false">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardClearBg"
            android:fitsSystemWindows="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/lyt_toolbar"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/bg_gradient_top"
                android:fitsSystemWindows="true">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:contentInsetStartWithNavigation="0dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@android:color/white"
                            app:fontFamily="@font/custom_font_medium" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <ImageButton
                            android:id="@+id/bt_info"
                            android:layout_width="@dimen/spacing_40"
                            android:layout_height="?attr/actionBarSize"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_info_outline"
                            app:tint="@android:color/white" />

                        <View
                            android:layout_width="@dimen/spacing_12"
                            android:layout_height="0dp" />

                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progress_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="85dp"
            android:background="@drawable/shape_overlay_round"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/spacing_8"
            android:paddingTop="3dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/white"
            app:fontFamily="@font/custom_font_medium"
            app:layout_anchor="@id/lyt_bottom_bar"
            app:layout_anchorGravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/lyt_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_gradient_down"
            android:clickable="true"
            android:gravity="bottom"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="@dimen/spacing_6"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lyt_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="detailsActionClick"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/ic_share"
                        app:tint="@android:color/white" />

                    <View
                        android:layout_width="@dimen/spacing_6"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_share"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        app:fontFamily="@font/custom_font_medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_favorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="detailsActionClick"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_favorite"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/ic_favorite"
                        app:tint="@android:color/white" />

                    <View
                        android:layout_width="@dimen/spacing_6"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_favorite"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        app:fontFamily="@font/custom_font_medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_download"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="detailsActionClick"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/ic_file_download"
                        app:tint="@android:color/white" />

                    <View
                        android:layout_width="@dimen/spacing_6"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_save"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        app:fontFamily="@font/custom_font_medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_apply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="detailsActionClick"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/ic_format"
                        app:tint="@android:color/white" />

                    <View
                        android:layout_width="@dimen/spacing_6"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_apply"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        app:fontFamily="@font/custom_font_medium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include layout="@layout/include_ad_banner" />

</LinearLayout>